--- a/squircleview/build.gradle
+++ b/squircleview/build.gradle
@@ -33,3 +33,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 }
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.android-inheritx'
